--- a/app/src/main/res/layout/activity_milestone_view.xml
+++ b/app/src/main/res/layout/activity_milestone_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="fill_parent" >
 
     <ListView
-        android:id="@+id/taskList"
+        android:id="@+id/milestoneList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:dividerHeight="1dp"
@@ -15,6 +15,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="@string/emptyTask" />
+        android:text="@string/emptyMilestone" />
 
 </RelativeLayout>
