--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,9 +4,15 @@
     tools:context="com.example.sqlitesample.MainActivity" >
 
     <item
+        android:id="@+id/edit_scheme"
+        android:enabled="false"
+        android:orderInCategory="100"
+        android:title="@string/edit"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/add_scheme"
         android:icon="@android:drawable/ic_menu_add"
-        android:orderInCategory="100"
+        android:orderInCategory="101"
         android:title="@string/add_Scheme"
         app:showAsAction="always"/>
 
