--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -8,6 +8,7 @@
         android:enabled="false"
         android:orderInCategory="100"
         android:title="@string/edit"
+        android:visible="false"
         app:showAsAction="always" />
     <item
         android:id="@+id/add_scheme"
