--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     tools:context="com.example.sqlitesample.MainActivity" >
 
     <item
-        android:id="@+id/add_scheme"
+        android:id="@+id/menu_add"
         android:icon="@android:drawable/ic_menu_add"
         android:orderInCategory="100"
         android:title="@string/add_Scheme"
