--- a/app/src/main/res/layout/activity_listview_view.xml
+++ b/app/src/main/res/layout/activity_listview_view.xml
@@ -14,7 +14,8 @@
         android:layout_marginRight="6dp"
         android:padding="3dp"
         android:visibility="visible"
-        android:layout_marginEnd="6dp" />
+        android:layout_marginEnd="6dp"
+        />
 
     <TextView
         android:id="@+id/title"
@@ -27,7 +28,10 @@
         android:textSize="17sp"
         android:textStyle="bold"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/id" />
+        android:layout_toEndOf="@id/id"
+        android:focusable="false"
+        android:background="@drawable/my_drawable"
+    />
 
     <TextView
         android:id="@+id/desc"
@@ -41,6 +45,7 @@
         android:padding="3dp"
         android:visibility="visible"
         android:layout_marginStart="10dp"
-        android:layout_toEndOf="@id/id" />
+        android:layout_toEndOf="@id/id"
+        />
 
 </RelativeLayout>
