--- a/app/src/main/res/layout/activity_view_task.xml
+++ b/app/src/main/res/layout/activity_view_task.xml
@@ -8,7 +8,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:dividerHeight="1dp"
-        android:padding="10dp"></ListView>
+        android:padding="10dp">
+    </ListView>
 
     <TextView
         android:id="@+id/lblEmpty"
