--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <drawable name="red_color">#ff0000</drawable>
+    <drawable name="white_color">#ffffff</drawable>
+    <drawable name="orange_color">#ffffbb33</drawable>
+    <drawable name="black_color">#000000</drawable>
+    <drawable name="green_color">#008577</drawable>
 </resources>
