--- a/app/src/main/res/layout/activity_listview_view.xml
+++ b/app/src/main/res/layout/activity_listview_view.xml
@@ -11,20 +11,25 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
         android:padding="3dp"
-        android:visibility="visible"
-        android:layout_marginEnd="6dp"
-        />
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginRight="6dp"
+        android:padding="3dp"
+        android:visibility="visible"
+        android:layout_marginEnd="6dp"
         android:layout_marginLeft="10dp"
         android:layout_toRightOf="@id/id"
         android:maxLines="1"
-        android:padding="3dp"
         android:textSize="17sp"
         android:textStyle="bold"
         android:layout_marginStart="10dp"
