--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,10 +4,16 @@
     tools:context="com.example.sqlitesample.MainActivity" >
 
     <item
+        android:id="@+id/Edit"
+        android:orderInCategory="101"
+        android:title="@string/edit"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_add"
         android:icon="@android:drawable/ic_menu_add"
-        android:orderInCategory="100"
-        android:title="@string/add_Scheme"
-        app:showAsAction="always"/>
+        android:orderInCategory="101"
+        android:title="@string/add"
+        app:showAsAction="never" />
 
 </menu>
