fixed scheme layout

--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -9,9 +9,13 @@
     <EditText
         android:id="@+id/schemeName"
         android:layout_width="0dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="107dp"
-        android:layout_marginBottom="86dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
         android:hint="@string/add_Scheme"
         android:importantForAutofill="no"
@@ -24,32 +28,32 @@
     <EditText
         android:id="@+id/schemeDesc"
         android:layout_width="0dp"
-        android:layout_height="56dp"
-        android:layout_marginTop="79dp"
-        android:layout_marginBottom="77dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="120dp"
         android:ems="10"
         android:hint="@string/task_desc"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/addScheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/schemeName" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/addScheme"
-        android:layout_width="wrap_content"
-        android:layout_height="55dp"
-        android:layout_marginStart="140dp"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="34dp"
-        android:layout_marginEnd="141dp"
-        android:layout_marginRight="141dp"
-        android:layout_marginBottom="345dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="352dp"
         android:text="@string/add_Scheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/schemeDesc" />
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
