--- a/app/src/main/res/layout/activity_modify_task.xml
+++ b/app/src/main/res/layout/activity_modify_task.xml
@@ -46,4 +46,10 @@
             android:text="@string/delete" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/done_btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/done" />
+
 </LinearLayout>
