--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -17,7 +17,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:ems="10"
-        android:hint="@string/add_Scheme"
+        android:hint="@string/add_scheme"
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/schemeDesc"
@@ -51,7 +51,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="352dp"
-        android:text="@string/add_Scheme"
+        android:text="@string/add_scheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
