--- a/app/src/main/res/layout/activity_listview_view.xml
+++ b/app/src/main/res/layout/activity_listview_view.xml
@@ -14,7 +14,7 @@
         android:layout_marginEnd="6dp"
         android:layout_marginRight="6dp"
         android:padding="3dp"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/title"
